# ai-business-process-automation-tool

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  audit.py  connectors.py  deps.py  planner.py  router.py  runs.py  triggers.py  workflows.py
backend/app/connectors/: __init__.py  base.py  crm.py  email.py  http_action.py  registry.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  connector.py  planner.py  run.py  workflow.py
backend/app/services/: __init__.py  audit.py  planner.py  template.py  workflow_engine.py
backend/app/workers/: runner.py
backend/tests/: conftest.py
backend/tests/integration/: test_root.py  test_workflow_run.py
backend/tests/unit/: test_connectors.py  test_health.py  test_planner.py  test_template.py  test_workflow_engine.py
docs/: 00-product-brief.md  01-architecture.md  02-tech-stack.md  03-workflow-spec.md  04-mvp-roadmap.md  05-repository-structure.md  06-risk-security.md  07-testing-strategy.md  08-build-checklist.md  09-phase-completion.md
examples/prompts/: planner-system-prompt.md
examples/workflow-specs/: client-signup.json
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
infra/: README.md
(+9 files in other folders)
