[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-business-process-automation-backend"
version = "0.1.0"
description = "Backend API and worker for AI Business Process Automation Tool"
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
